app/styles/app.scss
@import "ember-modal-dialog/ember-modal-structure";
@import "ember-modal-dialog/ember-modal-appearance";
@import "ember-bootstrap/bootstrap";
@import url('https://fonts.googleapis.com/css?family=Monoton|Poiret+One');

//General
body{
  background: url('http://i.imgur.com/X35zVxX.jpg') no-repeat center center fixed;
  background-color: #282828;
  color: white;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
    Helvetica, Arial, "Lucida Grande", sans-serif;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.inline{
  display: inline-block;;
}

h1{
  font-size: 50px;
  font-weight: 200;
  color: #173568;
  padding: 0px 20px 10px 20px;
}

.blackFont{
  color: #282828;
}

.btn{
  color: white;
  background-color: #173568;
  margin: 5px 5px 5px 5px;
}

.btn:hover{
  color: white;
  opacity: 1;
}

.redirect{
  color: #282828;
}

.marginBottom20{
  padding-bottom: 20px;
}

.form-group {
  color: black;
}

//Index Page

#index{
  padding-top: 15%;
  padding-bottom: 20px;
}

#companyName{
  font-family: 'Monoton', cursive;
}

.login{
  font-size: 25px;
  color: #282828;
}

//Navbar
.logout{
  padding: 15px;
  background-color: transparent;
  border: transparent;
  opacity: 0.6;
  color: rgba(255,255,255,0.6);
}

.logout:hover{
  opacity: 1;
}

.logout-store{
  padding: 15px;
  background-color: transparent;
  border: transparent;
  opacity: 0.6;
  color: rgba(255,255,255,0.6);
}

.logout-store:hover{
  opacity: 1;
}

.sign-up-hbs {
  background-color: white;
  border-radius: 10px;
  width: 500px;
  padding: 20px;
  margin-top: 80px;
  display: flex;
  justify-content: center;
  align-items: center;

  input {
    margin: 2px auto;
    height: 35px;
    width: 250px;
    color: black;
    font-size: 20px;
  }

  button{
    width: 200px;
    margin-top: 0.5px;
  }
}

.select-user-type {
  margin: 3px;
  width: 120px;
  color: black;
  font-size: 14px;
}

// select-shop
.storeSelect{
  width: 80%;
  height: 50px;
  font-size: 15px;
}

.display-map{
  padding-top: 30px;
  padding-bottom: 50px;
}

//Customer Index
.display{
  width: 300px;
}

.displayProduct{
  color: #282828;
}


.findProduct{
  padding: 20px 0px 20px 0px;
}

.findProductBtn{
  width: 55%;
  height: 50px;
}

//Payment
.creditCard {
  padding-bottom: 15px;

  h3{
    padding-bottom: 15px;
  }
}

//Store Index
.store-index-hbs {

}

.store_image {
  width:150px;
}


.cart_tile{
  text-align: center;
}

.cart_image{
  width:auto;
  max-height: 200px;
}

.cart{
  text-align: center;
  display: fixed;
  width:20%;
}

.cart h2{
  margin-top: 0;
}

//Store Index
.logo{
  margin: 0;
  float: left;
  width: 20%;
}

.store_image {
  width:150px;
}

.cproduct-display{
  border : 1px solid black;
  text-align: center;
  padding:5px;
  border-radius: 2px;
  margin-top: 10px;
  margin-bottom: 10px;
  height:200px;
}

.cproduct-display:hover{
  background-color: grey;
}

.store_image{
  max-height: 200px;
}

.cart_image{
  max-height: 100px;
}



.cdisplay{
  margin-top: 50px;
}

.store_products{
  text-align: center;
  padding:5px;
  border: solid 1px black;
  border-radius: 4px;
  margin-top:5px;
  margin-bottom: 5px;

}

.store_products div p{
  padding-top: 30px;
  padding-bottom: 30px;
  margin: 0;
}

.store_image{
  max-height: 75px;
  width: auto;
}

.update_form{
  text-align: center;
}

.update_btn{
  padding-top: 25px;
  padding-bottom: 25px;
}

.title{
  font-size: 24px;
  text-align: center;
  margin-top: 30px;
  border-top: 1px solid black;
  float:right;
}

.product_display{
  width:80%;
  float:left;
}

.total_title {
  float:left;
}

.total_number{
  float:right;
}

#shop-image {
  max-height: 400px;
  width: auto;
}

#tile {
  display: inline-block;
  padding: 10px;
  margin: 10px;
}

#img_tile {
  background-color: white;
    height: 240px;
    width: 200px;
}

img {
  max-width:100%;
  max-height:100%;
  margin: 10% 0 10% 0;
}

#prod_info {
  width: 200px;
  color: black;
  style: bold;
  }

#prod_btn {
  display: inline-block;
}

.display-map {
  display: flex;
}

#the-map {
    height: 400px;
    width: 400px;
  }

#output {
  min-height: 100px;
}

#relocate {
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
    Helvetica, Arial, "Lucida Grande", sans-serif;
}

.navbar {
  border-radius: 0;
}

#sale_page {
  background-color: white;
  color: black;
}

